--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">BuildingManager</string>
+    <string name="app_name_readable">Building Manager</string>
     <string name="login_button">Login</string>
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
@@ -10,5 +11,6 @@
     <string name="email_hint">Email</string>
     <string name="phone_hint">Phone number</string>
     <string name="register_button">Register</string>
+    <string name="register_title">Register</string>
     <!-- Strings related to login -->
 </resources>
