--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="phone_hint">Phone number</string>
     <string name="register_button">Register</string>
     <string name="register_title">Register</string>
+    <string name="sign_in_error">Please enter valid information</string>
     <!-- Strings related to login -->
 </resources>
