--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,9 @@
     <string name="register_button">Register</string>
     <string name="register_title">Register</string>
     <string name="sign_in_error">Please enter valid information</string>
+    <string name="email_wrong">Enter valid email</string>
+    <string name="password_no_match">Passwords don\'t match</string>
+    <string name="login_failed">Login failed</string>
+    <string name="login_success">Login successful</string>
     <!-- Strings related to login -->
 </resources>
